--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>METASPOT</title>
+  <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="/index.css" type="text/css" />
   <script type="text/javascript" src="https://rawgit.com/CitronTech/metaspot/master/build/metaspot.bundle.js"></script>
 </head>
 <body>
+  METASPOT
 </body>
 </html>
