--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/metaspot/index.css" type="text/css" />
+  <link rel="stylesheet" href="/metaspot/resources/linecons.css" type="text/css" />
   <script type="text/javascript" src="https://rawgit.com/CitronTech/metaspot/master/build/metaspot.bundle.js"></script>
 </head>
 <body>
-  METASPOT
+  METASPOT <span aria-hidden="true" class="li_vynil"></span>
 </body>
 </html>
