--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <script type="text/javascript" src="https://rawgit.com/CitronTech/metaspot/master/build/metaspot.bundle.js"></script>
 </head>
 <body>
-  METASPOT <span aria-hidden="true" class="li_vynil"></span>
+  METASPO<div aria-hidden="true" class="logo-icon li_vynil"></div>T
 </body>
 </html>
