--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <script type="text/javascript" src="https://rawgit.com/CitronTech/metaspot/master/build/metaspot.bundle.js"></script>
 </head>
 <body>
-  METASPO<div aria-hidden="true" class="logo-icon li_vynil"></div>T
+  <div class="logo">
+    METASP<div aria-hidden="true" class="logo-icon li_vynil"></div>T
+  </div>
 </body>
 </html>
