--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="logo">
-    METASP<div aria-hidden="true" class="logo-icon li_vynil"></div>T
+    METASP<div class="logo-icon"><div aria-hidden="true" class="li_vynil"></div></div>T
   </div>
 </body>
 </html>
