--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
   <script>
     AWS.config.region = 'us-east-1';
     AWS.config.credentials = new AWS.CognitoIdentityCredentials({
-        IdentityPoolId: 'us-east-1:4346742a-8a15-4caa-92be-14eb7f5d2995',
+      IdentityPoolId: 'us-east-1:4346742a-8a15-4caa-92be-14eb7f5d2995'
+    });
+    
+    AWS.config.credentials.get(function(){
+      var accessKeyId = AWS.config.credentials.accessKeyId;
+      var secretAccessKey = AWS.config.credentials.secretAccessKey;
+      var sessionToken = AWS.config.credentials.sessionToken;
+      
+      console.log(sessionToken)
     });
   </script>
 </head>
