Adding device fingerprinting lib

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       var sessionToken = AWS.config.credentials.sessionToken;
       
       console.log(sessionToken)
+      
+      new Fingerprint2().get(function(result, components){
+        console.log(result); //a hash, representing your device fingerprint
+        console.log(components); // an array of FP components
+      });
     });
   </script>
 </head>
