--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/metaspot/index.css" type="text/css" />
   <link rel="stylesheet" href="/metaspot/resources/linecons.css" type="text/css" />
-  <script src="http://cdn.jsdelivr.net/fingerprintjs2/<VERSION>/fingerprint2.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/fingerprintjs2/<VERSION>/fingerprint2.min.js"></script>
   <script type="text/javascript" src="https://rawgit.com/CitronTech/metaspot/master/build/metaspot.bundle.js"></script>
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.3.17.min.js"></script>
   <script>
