--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
       IdentityPoolId: 'us-east-1:4346742a-8a15-4caa-92be-14eb7f5d2995'
     });
     
-    AWS.config.credentials.get(function(){
+    AWS.config.credentials.get(function() {
       var accessKeyId = AWS.config.credentials.accessKeyId;
       var secretAccessKey = AWS.config.credentials.secretAccessKey;
       var sessionToken = AWS.config.credentials.sessionToken;
+      
+      console.log(sessionToken);
     });
   </script>
 </head>
