--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>METASPOT</title>
-  <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/metaspot/index.css" type="text/css" />
   <link rel="stylesheet" href="/metaspot/resources/linecons.css" type="text/css" />
@@ -12,7 +11,7 @@
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.3.17.min.js"></script>
 </head>
 <body>
-  <div class="top">
+  <div class="top fill">
     <div class="header">
       <div class="logo">
         METASP<div class="logo-icon"><div aria-hidden="true" class="li_vynil"></div></div>T
