Index.html update

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
       <div class="logo">
         METASP<div class="logo-icon"><div aria-hidden="true" class="li_vynil"></div></div>T
       </div>    
-    </div>    
+    </div>  
+    <div class="body">
+      Citron Technologies
+    </div>
   </div>
 </body>
 </html>
