--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
   </div>
   <script>
-    metaspot.render(document.querySelector('.body'))
+    metaspot.render({ container: document.querySelector('.body') })
   </script>
 </body>
 </html>
