Updating to Less

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>METASPOT</title>
   
   <link href='https://fonts.googleapis.com/css?family=Product+Sans' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="/metaspot/index.css" type="text/css" />
+  <!--link rel="stylesheet" href="/metaspot/index.css" type="text/css" -->
   <link rel="stylesheet" href="/metaspot/resources/linecons.css" type="text/css" />
   
   <script type="text/javascript" src="/metaspot/build/metaspot.bundle.js"></script>
@@ -15,15 +15,19 @@
 </head>
 <body>
   <div class="top fill">
-    <div class="header">
-      <div class="logo">
-        METASP<div class="logo-icon"><div aria-hidden="true" class="li_vynil"></div></div>T
-      </div>    
-    </div>  
+    <div class="sidebar">
+      <div class="header">
+        <div class="logo">
+          METASP<div class="logo-icon"><div aria-hidden="true" class="li_vynil"></div></div>T
+        </div>    
+      </div>
+    </div>
+    
     <div class="body">
 
     </div>
   </div>
+  
   <script>
     metaspot.render({ container: document.querySelector('.body') })
   </script>
