--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta 
+    name="viewport" 
+    content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   
   <title>METASPOT</title>
   
-  <link href='https://fonts.googleapis.com/css?family=Product+Sans' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="/metaspot/resources/linecons.css" type="text/css" />
+  <link 
+    href='https://fonts.googleapis.com/css?family=Product+Sans' 
+    rel='stylesheet' 
+    type='text/css'>
+  <link 
+    rel="stylesheet" 
+    href="/metaspot/resources/linecons.css" 
+    type="text/css" />
   
   <script type="text/javascript" src="/metaspot/build/metaspot.bundle.js"></script>
   <!--script src="https://sdk.amazonaws.com/js/aws-sdk-2.3.17.min.js"></script-->
