--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>METASPOT</title>
   <meta charset="UTF-8">
   <meta 
     name="viewport" 
     content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  
-  <title>METASPOT</title>
+  <meta
+    http-equiv="Content-Security-Policy"
+    content="default-src 'self' https://fonts.googleapis.com/css">
   
   <link 
     href='https://fonts.googleapis.com/css?family=Product+Sans' 
@@ -17,8 +19,12 @@
     href="/metaspot/resources/linecons.css" 
     type="text/css" />
   
-  <script type="text/javascript" src="/metaspot/build/metaspot.bundle.js"></script>
-  <!--script src="https://sdk.amazonaws.com/js/aws-sdk-2.3.17.min.js"></script-->
+  <script
+    type="text/javascript"
+    src="/metaspot/build/metaspot.bundle.js">
+  </script>
+  <!--script src="https://sdk.amazonaws.com/js/aws-sdk-2.3.17.min.js">
+  </script-->
 </head>
 <body>
   <div class="top fill">
@@ -36,7 +42,9 @@
   </div>
   
   <script>
-    metaspot.render({ container: document.querySelector('.body') })
+    metaspot.render({
+      container: document.querySelector('.body')
+    })
   </script>
 </body>
 </html>
