--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta
     http-equiv="Content-Security-Policy"
-    content="default-src 'self' https://fonts.googleapis.com/css">
+    content="default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:">
   
   <link 
     href='https://fonts.googleapis.com/css?family=Product+Sans' 
