--- a/index.html
+++ b/index.html
@@ -36,15 +36,7 @@
       </div>
     </div>
     
-    <div class="body">
-
-    </div>
+    <div class="body"></div>
   </div>
-  
-  <script>
-    metaspot.render({
-      container: document.querySelector('.body')
-    })
-  </script>
 </body>
 </html>
