Moved content to App

--- a/index.html
+++ b/index.html
@@ -26,17 +26,5 @@
   <!--script src="https://sdk.amazonaws.com/js/aws-sdk-2.3.17.min.js">
   </script-->
 </head>
-<body>
-  <div class="top fill">
-    <div class="sidebar">
-      <div class="header">
-        <div class="logo">
-          METASP<div class="logo-icon"><div aria-hidden="true" class="li_vynil"></div></div>T
-        </div>    
-      </div>
-    </div>
-    
-    <div class="body"></div>
-  </div>
-</body>
+<body></body>
 </html>
