--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     rel='stylesheet' 
     type='text/css'>
   <link 
+    href="https://fonts.googleapis.com/css?family=Varela+Round" 
+    rel="stylesheet">
+  <link 
     rel="stylesheet" 
     href="/metaspot/resources/linecons.css" 
     type="text/css" />
