--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     rel='stylesheet' 
     type='text/css'>
   <link 
-    href="https://fonts.googleapis.com/css?family=Varela+Round" 
+    href="https://fonts.googleapis.com/css?family=Pacifico" 
     rel="stylesheet">
   <link 
     rel="stylesheet" 
