--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <link 
     href="https://fonts.googleapis.com/css?family=Pacifico" 
     rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Sacramento" 
+    rel="stylesheet">
   <link 
     rel="stylesheet" 
     href="/metaspot/resources/linecons.css" 
