--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     href="https://fonts.googleapis.com/css?family=Sacramento" 
     rel="stylesheet">
   <link 
+    href="https://fonts.googleapis.com/css?family=Molle:400i" 
+    rel="stylesheet">
+  <link 
     rel="stylesheet" 
     href="/metaspot/resources/linecons.css" 
     type="text/css" />
