--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
   <link
     href="https://fonts.googleapis.com/css?family=Sacramento" 
     rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Gruppo" rel="stylesheet">
+  <link 
+    href="https://fonts.googleapis.com/css?family=Gruppo"
+    rel="stylesheet">
+  <link 
+    href="https://fonts.googleapis.com/css?family=Dancing+Script"
+    rel="stylesheet">
   <link 
     rel="stylesheet" 
     href="/metaspot/resources/linecons.css" 
