--- a/index.html
+++ b/index.html
@@ -15,27 +15,19 @@
     rel='stylesheet' 
     type='text/css'>
   <link 
-    href="https://fonts.googleapis.com/css?family=Pacifico" 
-    rel="stylesheet">
-  <link
-    href="https://fonts.googleapis.com/css?family=Sacramento" 
-    rel="stylesheet">
-  <link 
-    href="https://fonts.googleapis.com/css?family=Gruppo"
-    rel="stylesheet">
-  <link 
     href="https://fonts.googleapis.com/css?family=Dancing+Script"
     rel="stylesheet">
   <link 
-    rel="stylesheet" 
-    href="/metaspot/resources/linecons.css" 
-    type="text/css" />
-  
+    rel="stylesheet"
+    type="text/css"
+    href="resources/linecons.css" />
+    
   <script
     type="text/javascript"
-    src="/metaspot/build/metaspot.bundle.js">
+    src="build/metaspot.bundle.js">
   </script>
-  <!--script src="https://sdk.amazonaws.com/js/aws-sdk-2.3.17.min.js">
+  <!--script
+    src="https://sdk.amazonaws.com/js/aws-sdk-2.3.17.min.js">
   </script-->
 </head>
 <body></body>
